Complete backend and frontend integration with authentication and dashboards